--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-	"name": "animation",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"dev": "webpack watch --mode=development --config webpack.config.js",
-		"prod": "webpack --mode=production --config webpack.config.js"
-	},
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"@types/three": "^0.146.0",
-		"three": "^0.145.0"
-	},
-	"devDependencies": {
-		"ts-loader": "^9.4.2",
-		"typescript": "^4.9.3",
-		"webpack": "^5.74.0",
-		"webpack-cli": "^4.10.0"
-	}
+  "name": "animation",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.ts",
+  "scripts": {
+    "dev": "webpack watch --mode=development --config webpack.config.js",
+    "prod": "webpack --mode=production --config webpack.config.js",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open --mode=development ",
+    "build": "webpack"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@types/three": "^0.146.0",
+    "three": "^0.145.0"
+  },
+  "devDependencies": {
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.3",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
+  }
 }
